<?xml version="1.0" encoding="utf-8"?>



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/loginBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/user_type"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <TextView
            android:id="@+id/locationName"
            android:layout_width="83dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/locationType"
            android:layout_marginTop="124dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/location_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/locationType"
            android:layout_width="182dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="79dp"
            android:layout_marginTop="164dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/location_type"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/locationAddress"
            android:layout_width="223dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/locationName"
            android:layout_marginTop="215dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/location_address"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/locationNumber"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/locationName"
            android:layout_marginBottom="209dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/location_number"
            android:textSize="24sp" />


    </RelativeLayout>
