<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DashboardActivity">



        <android.support.v7.widget.RecyclerView
            android:id="@+id/location_recycler"
            android:layout_width="426dp"
            android:layout_height="175dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="174dp" />

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/orange"
            android:visibility="visible" />

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:label="@string/app_label"
            android:hint="@string/search_hint"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/donation_recycler"
            android:layout_width="426dp"
            android:layout_height="175dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="392dp" />

        <EditText
            android:id="@+id/locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="126dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/locations_dash" />

        <EditText
            android:id="@+id/donations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_recycler"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/donations_dash" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>