<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/loginBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/orange"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/border"
        android:layout_width="242dp"
        android:layout_height="228dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/rec"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:background="@drawable/rounded_button"
        android:text="@string/action_sign_in_short"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="197dp"
        android:background="@drawable/rounded_button"
        android:text="@string/action_sign_in_short"
        android:textColor="#FFFFFF" />



    <EditText
        android:id="@+id/username"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="266dp"
        android:background="@drawable/rounded_text"
        android:fontFamily="monospace"
        android:hint="@string/prompt_username"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="233dp"
        android:background="@drawable/rounded_text"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:textSize="14sp" />


</RelativeLayout>