<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LocEmployDashActivityActivity">


        <TextView
            android:id="@+id/donationsNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="TextView"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            tools:text="@string/donationsNotFound" />

        <Button
            android:id="@+id/addDonation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/add_button"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dashboardbutton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/donation"
            android:layout_alignParentStart="true"
            android:layout_marginStart="33dp"
            android:background="@drawable/dashboardbtn"
            android:visibility="visible" />
        <TextView
            android:id="@+id/donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/donation"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:visibility="visible" />

        <SearchView
            android:id="@+id/searchbar"
            android:layout_width="359dp"
            android:layout_height="46dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:background="@drawable/blank_bar"
            android:hint="@string/search_hint"
            android:label="@string/app_label" >

        </SearchView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/donation_recycler"
            android:layout_width="426dp"
            android:layout_height="470dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="175dp" >

        </android.support.v7.widget.RecyclerView>


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>