<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">


        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="129dp"
            android:layout_height="88dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="71dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/orange"
            android:visibility="visible" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/username"
            android:layout_below="@+id/loginLogo"
            android:fontFamily="@font/montserrat"
            android:text="@string/prompt_username"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo"
            tools:text="username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="229dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:background="@drawable/blank_bar"
            android:fontFamily="@font/montserrat"
            android:hint="@string/prompt_username"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textSize="15sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/username"
            android:layout_below="@+id/username"
            android:fontFamily="@font/montserrat"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:text="password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="230dp"
            android:layout_height="34dp"
            android:layout_below="@+id/pass"
            android:layout_centerHorizontal="true"
            android:background="@drawable/blank_bar"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/userType"
            android:layout_alignStart="@+id/name"
            android:layout_marginBottom="-315dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/user_type"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:text="@string/user_type" />

        <Spinner
            android:id="@+id/userType"
            android:layout_width="235dp"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="315dp"
            android:background="@drawable/drop_down"
            android:spinnerMode="dropdown"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_type" />

        <Spinner
            android:id="@+id/location"
            android:layout_width="235dp"
            android:layout_height="28dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="348dp"
            android:background="@drawable/drop_down"
            android:spinnerMode="dropdown"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_type" />

        <Button
            android:id="@+id/register"
            android:layout_width="197dp"
            android:layout_height="66dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="158dp"
            android:background="@drawable/register_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="196dp"
            android:layout_height="67dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp"
            android:background="@drawable/cancel_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>